# UNO-R4-rust

./: Cargo.toml  LICENSE  README.md  app.asm  app.hex  baudrate.ods  canable.sh  expand  justfile  memory.x
examples/: .gitignore  Cargo.toml  justfile  memory.x
src/: can.rs  clk.rs  interrupts.rs  lib.rs  main.rs  uart.rs  uart_old.rs
src/uart/: mod.rs
