[package]
name = "uno-r4-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ra4m1 = { version = "0.2.1", git = "https://github.com/ra-rs/ra", features = [
    "rt",
    "critical-section",
] }
cortex-m-rt = { version = "0.7.5" }
panic-halt = "1.0.0"
cortex-m = { version = "0.7.7" }

[[bin]]
name = "uno-r4-rust"
test = false
bench = false
