[package]
name = "uno-r4-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ra4m1 = { version = "0.2.1", git = "https://github.com/ra-rs/ra", features = [
    "rt",
    "critical-section",
] }
cortex-m-rt = { version = "0.7.5" }
panic-halt = "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
circular-buffer = { version = "1.1.0", default-features = false, features = [
    "embedded-io",
] }
critical-section = "1.2.0"
heapless = "0.8.0"

embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy" }
embedded-io = "0.6.1"
log = "0.4.27"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
embedded-can = "0.4.1"
bitfield-struct = "0.11.0"

[[bin]]
name = "uno-r4-rust"
test = false
bench = false
